--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<title>Jacky Design</title>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 
+	<link href="https://fonts.googleapis.com/css2?family=Solway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;0,800;1,400;1,700&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/be2e40fc77.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 <!-- Header section here -->
@@ -12,21 +17,16 @@
 </section>
 
 <!-- top menu section here hahaha -->
-<section>
 	<header>
-	<div  class="navbarContainer">
 		<a href="" class="logo"><img src="./img/logo.png" width="100" height="100"></a>
-		 <div class="navbar">	
-		 	<nav> 
-			  <ul class="topmenu">
-			    <li><a class="navListItem" href="#work">Work</a></li>
-			    <li><a class="navListItem" href="#about">About</a></li>
-			  </ul>
-		 	 </nav>
-		 </div>	 
-	  </div>
+		 
+		<nav>
+	        <a href="#work">Work</a>
+	        <a href="#aboutMe">About Me</a>
+      	</nav>
 	</header>
-</section>
+
+
 <!-- project menu section here -->
 
 <section>
@@ -97,8 +97,7 @@
 
 	<div class="menu">
 		<div class="profileimg">
-		<!-- <a href="#8"> -->
-		<img class="" src="./img/drone home page.jpg">
+		<a href="wetravel.html"><img class="" src="./img/drone home page.jpg"></a>
 		</div>
 		<div class="project">WeTravel</div>
 		<div class="product">Mobile Application | UX UI Visual Design</div>
@@ -106,6 +105,20 @@
 </div>
 </section>
 <!-- menu -->
+
+	<footer>
+      <ul>
+       <!--  <a href="#linkin"> <i class="fab fa-linkedin"></i> </a>
+        <a href="#dribbble"> <i class="fab fa-dribbble"></i> </a>
+        <a href="#instagram"> <i class="fab fa-instagram"></i> </a>
+        <a href="#facebook"> <i class="fab fa-facebook"></i> </a> -->
+      </ul>
+      <nav>
+        <a href="#work">Work</a>
+        <a href="#aboutMe">About Me</a>
+      </nav>
+    </footer>
+
 
 </body>
 </html>
