--- a/wetravel.html
+++ b/wetravel.html
@@ -91,6 +91,20 @@
 		</div>
 	</div>	
 
+	<hr>	
+
+		<div class="backgtound">	
+		<h2>Competitive Research</h2>
+		
+		<div class="content2">
+		<h4>Direct</h4>
+		<p>Hotel/accommodation booking competitors</p>
+
+		<h4>Indirect</h4>
+		<p>Competitors that do not provide a booking service</p>
+		
+		</div>
+	</div>	
 <hr>
 </section>
 <!-- menu -->
