--- a/UX_UI_HW_19/index.html
+++ b/UX_UI_HW_19/index.html
@@ -17,8 +17,8 @@
 </section>
 
 <!-- top menu section here hahaha -->
-	<header class="col1">
-		<a href="index.html" class="logo"><img src="./img/logo.png" width="100" height="100"></a>
+	<header>
+		<a href="" class="logo"><img src="./img/logo.png" width="100" height="100"></a>
 		 
 		<nav>
 	        <a href="#work">Work</a>
@@ -31,7 +31,7 @@
 
 <section>
 
-<div class="col grid-container">
+<div class="grid-container">
 	
 	<div class="menu">
 		<div class="profileimg">
@@ -106,8 +106,13 @@
 </section>
 <!-- menu -->
 
-	<footer class="col1">
-    <hr>
+	<footer>
+      <ul>
+       <!--  <a href="#linkin"> <i class="fab fa-linkedin"></i> </a>
+        <a href="#dribbble"> <i class="fab fa-dribbble"></i> </a>
+        <a href="#instagram"> <i class="fab fa-instagram"></i> </a>
+        <a href="#facebook"> <i class="fab fa-facebook"></i> </a> -->
+      </ul>
       <nav>
         <a href="#work">Work</a>
         <a href="#aboutMe">About Me</a>
