--- a/UX_UI_HW_20/index.html
+++ b/UX_UI_HW_20/index.html
@@ -119,6 +119,9 @@
       </nav>
     </footer>
 
+    <div class="preloader">
+  		<img src="img/loading.png">
+	</div>
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
